--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jsvectormap": "^1.5.3",
     "print-react": "^1.0.3",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-to-print": "^2.14.15",
